@@ -1,5 +1,8 @@
 2011-05-28  Philippe Brochard  <pbrochard@common-lisp.net>
 
+	* src/clfswm-internal.lisp (get-parent-layout): Handle correctly
+	unmanaged windows.
+
 	* src/clfswm-util.lisp (delete-focus-window-generic): Do not hide
 	child before removing, so prevent a flickering.
 
